// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cmds:add adds change with dependencies: change-with-dependency - argv 1`] = `
{
  "_": [
    "add",
    "contacts",
  ],
  "cwd": "<CWD>",
  "note": "Adds contacts table",
  "requires": "users",
}
`;

exports[`cmds:add adds change with dependencies: change-with-dependency - files 1`] = `
[
  "pgpm.plan",
  "launchql.control",
  "verify/users.sql",
  "verify/contacts.sql",
  "revert/users.sql",
  "revert/contacts.sql",
  "deploy/users.sql",
  "deploy/contacts.sql",
]
`;

exports[`cmds:add adds change with dependencies: change-with-dependency - result 1`] = `
{
  "_": [
    "add",
    "contacts",
  ],
  "cwd": "<CWD>",
  "note": "Adds contacts table",
  "requires": "users",
}
`;

exports[`cmds:add adds change with dependencies: change-with-dependency - transformResults 1`] = `[]`;

exports[`cmds:add adds change with dependencies: change-with-dependency - writeResults 1`] = `[]`;

exports[`cmds:add adds change with dependencies: dependency-change - argv 1`] = `
{
  "_": [
    "add",
    "users",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds change with dependencies: dependency-change - files 1`] = `
[
  "pgpm.plan",
  "launchql.control",
  "verify/users.sql",
  "revert/users.sql",
  "deploy/users.sql",
]
`;

exports[`cmds:add adds change with dependencies: dependency-change - result 1`] = `
{
  "_": [
    "add",
    "users",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds change with dependencies: dependency-change - transformResults 1`] = `[]`;

exports[`cmds:add adds change with dependencies: dependency-change - writeResults 1`] = `[]`;

exports[`cmds:add adds change with note: change-with-note - argv 1`] = `
{
  "_": [
    "add",
    "brands",
  ],
  "cwd": "<CWD>",
  "note": "Adds the brands table",
}
`;

exports[`cmds:add adds change with note: change-with-note - files 1`] = `
[
  "pgpm.plan",
  "launchql.control",
  "verify/brands.sql",
  "revert/brands.sql",
  "deploy/brands.sql",
]
`;

exports[`cmds:add adds change with note: change-with-note - result 1`] = `
{
  "_": [
    "add",
    "brands",
  ],
  "cwd": "<CWD>",
  "note": "Adds the brands table",
}
`;

exports[`cmds:add adds change with note: change-with-note - transformResults 1`] = `[]`;

exports[`cmds:add adds change with note: change-with-note - writeResults 1`] = `[]`;

exports[`cmds:add adds deeply nested path change: deeply-nested-path-change - argv 1`] = `
{
  "_": [
    "add",
    "schema/myschema/tables/mytable",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds deeply nested path change: deeply-nested-path-change - files 1`] = `
[
  "pgpm.plan",
  "launchql.control",
  "verify/schema/myschema/tables/mytable.sql",
  "revert/schema/myschema/tables/mytable.sql",
  "deploy/schema/myschema/tables/mytable.sql",
]
`;

exports[`cmds:add adds deeply nested path change: deeply-nested-path-change - result 1`] = `
{
  "_": [
    "add",
    "schema/myschema/tables/mytable",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds deeply nested path change: deeply-nested-path-change - transformResults 1`] = `[]`;

exports[`cmds:add adds deeply nested path change: deeply-nested-path-change - writeResults 1`] = `[]`;

exports[`cmds:add adds nested path change: nested-path-change - argv 1`] = `
{
  "_": [
    "add",
    "api/v1/endpoints",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds nested path change: nested-path-change - files 1`] = `
[
  "pgpm.plan",
  "launchql.control",
  "verify/api/v1/endpoints.sql",
  "revert/api/v1/endpoints.sql",
  "deploy/api/v1/endpoints.sql",
]
`;

exports[`cmds:add adds nested path change: nested-path-change - result 1`] = `
{
  "_": [
    "add",
    "api/v1/endpoints",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds nested path change: nested-path-change - transformResults 1`] = `[]`;

exports[`cmds:add adds nested path change: nested-path-change - writeResults 1`] = `[]`;

exports[`cmds:add adds simple change: simple-change - argv 1`] = `
{
  "_": [
    "add",
    "organizations",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds simple change: simple-change - files 1`] = `
[
  "pgpm.plan",
  "launchql.control",
  "verify/organizations.sql",
  "revert/organizations.sql",
  "deploy/organizations.sql",
]
`;

exports[`cmds:add adds simple change: simple-change - result 1`] = `
{
  "_": [
    "add",
    "organizations",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add adds simple change: simple-change - transformResults 1`] = `[]`;

exports[`cmds:add adds simple change: simple-change - writeResults 1`] = `[]`;

exports[`cmds:add verifies SQL files do not contain transaction statements: no-transaction-statements - argv 1`] = `
{
  "_": [
    "add",
    "no-transactions",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add verifies SQL files do not contain transaction statements: no-transaction-statements - files 1`] = `
[
  "pgpm.plan",
  "launchql.control",
  "verify/no-transactions.sql",
  "revert/no-transactions.sql",
  "deploy/no-transactions.sql",
]
`;

exports[`cmds:add verifies SQL files do not contain transaction statements: no-transaction-statements - result 1`] = `
{
  "_": [
    "add",
    "no-transactions",
  ],
  "cwd": "<CWD>",
}
`;

exports[`cmds:add verifies SQL files do not contain transaction statements: no-transaction-statements - transformResults 1`] = `[]`;

exports[`cmds:add verifies SQL files do not contain transaction statements: no-transaction-statements - writeResults 1`] = `[]`;
